[MM-166] Fix issue: decription not visible in tooltip and removed "see more" link

--- a/webapp/src/components/link_tooltip/tooltip.css
+++ b/webapp/src/components/link_tooltip/tooltip.css
@@ -66,9 +66,7 @@
 }
 
 .github-tooltip .tooltip-info .markdown-text {
-    max-height: 150px;
     line-height: 1.25;
-    overflow: hidden;
     word-break: break-word;
     word-wrap: break-word;
     overflow-wrap: break-word;
